[package]
name = "quantaxis-rs"
version = "0.3.0"
description = 'quantaxis in rust'
authors = ["yutiansut <yutiansut@qq.com>"]
edition = "2018"
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md"
]
readme = "README.md"
categories = ["science", "algorithms"]

[dependencies]
serde_json = "*"
serde_derive = "1.0"
serde = { version = "1.0", features = ["derive"] } # 序列化
csv = "1.1.3"
stopwatch = "*"
num = "0.2.0"
num-traits = "0.2.6"
rayon = "1.1" # 多线程
ndarray = "0.13.0" # ndarray
ndarray-csv = "0.4"
log = "0.4"
error-chain = "0.12.1"
regex = "1"
uuid = { version = "0.8", features = ["serde", "v1", "v4"] }
float-cmp = "0.4.0"
assert_approx_eq = "1.0.0"
bencher = "0.1.5"
rand = "0.6.5"
qifi-rs = { git="https://github.com/QUANTAXIS/qifi-rs.git" }
chrono = "0.4.11"
tokio = { version = "0.2.18", features = ["full"] }
tokio-util = { version = "0.3.0", features = ["full"] }
[dev-dependencies]




[[bench]]
name = "indicators"
path = "benches/indicators.rs"
harness = false

